Fixed fonts on firefox, and fixed svg fonts rendering

--- a/source/assets/stylesheets/locastyle/_fonts.css
+++ b/source/assets/stylesheets/locastyle/_fonts.css
@@ -1,6 +1,6 @@
 body, li, p, a {
   -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   -o-font-smoothing: antialiased;
   -ms-font-smoothing: antialiased;
   font-smoothing: antialiased;
@@ -23,7 +23,7 @@ body, li, p, a {
   font-family: 'locaweb';
   src: url('../fonts/locaicons/Locaweb-Icons.eot');
   src: url('../fonts/locaicons/Locaweb-Icons.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/locaicons/Locaweb-Icons.svg#iefix') format('svg'),
+    url('../fonts/locaicons/Locaweb-Icons.svg#locaweb') format('svg'),
     url('../fonts/locaicons/Locaweb-Icons.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -33,7 +33,7 @@ body, li, p, a {
   font-family: 'chamaicons';
   src: url('../fonts/locaicons/chamada-icons.eot');
   src: url('../fonts/locaicons/chamada-icons.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/locaicons/chamada-icons.svg#iefix') format('svg'),
+    url('../fonts/locaicons/chamada-icons.svg#chamaicons') format('svg'),
     url('../fonts/locaicons/chamada-icons.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -43,7 +43,7 @@ body, li, p, a {
   font-family: 'brandicon';
   src: url('../fonts/locaicons/brandicon.eot');
   src: url('../fonts/locaicons/brandicon.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/locaicons/brandicon.svg#iefix') format('svg'),
+    url('../fonts/locaicons/brandicon.svg#brandicon') format('svg'),
     url('../fonts/locaicons/brandicon.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
